--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,9 @@
 global.params.p1=33
 global.params.p2=22
+
+spring.cloud.config.enabled=true
+spring.cloud.discovery.enabled=true
+eureka.instance.prefer-ip-address=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#active all actuator endpoint
+management.endpoints.web.exposure.include=*
