--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,7 @@
-global.params.p1=33
-global.params.p2=22
+global.params.p1=3322
+global.params.p2=2233
 
+spring.h2.console.enabled=true
 spring.cloud.config.enabled=true
 spring.cloud.discovery.enabled=true
 eureka.instance.prefer-ip-address=true
