--- a/application.properties
+++ b/application.properties
@@ -6,5 +6,7 @@ spring.cloud.config.enabled=true
 spring.cloud.discovery.enabled=true
 eureka.instance.prefer-ip-address=true
 eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
+
+#eureka.client.service-url.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8761/eureka}
 #active all actuator endpoint
 management.endpoints.web.exposure.include=*
